# docker-database-manager

./: .gitignore  ANALISIS_Y_MEJORAS.md  AUTO_UPDATE_GUIDE.md  BIOME_CONFIG.md  BRANCH_PROTECTION_GUIDE.md  CAMBIOS_DOCKER_Y_BIOME.md  CAMBIOS_README.md  CHANGELOG.md  CHANGELOG_LATEST.md  CHANGES_SUMMARY.md  DEBOUNCE_IMPLEMENTATION.md  DESIGN_TRANSFORMATION.md  FIXES_APPLIED.md  ICON_ALIGNMENT_FIX.md  IDEAS_MEJORAS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  INSTALL.md  LICENSE  LOGO_UPDATE.md  MIGRATION_DELETE_FEATURE.md  MONITORING-GUIDE.md  MULTI_DATABASE_CHANGES.md  QUICK_START_BRANCH_PROTECTION.md  README.md  RELEASES.md  RELEASE_GUIDE.md  RESUMEN_SESION.md  SUBIR_A_GITHUB.md  TEMPLATES-GUIDE.md  TEMPLATES_IMPLEMENTATION.md  UI_REDESIGN.md  WORKFLOW_UPLOAD_NOTE.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  test-buttons.html  test-modal.html  test-monitoring.sh
.github/: PULL_REQUEST_TEMPLATE.md  QUICK_RELEASE.md  RELEASE_SETUP.md  setup-release.sh
.github/workflows/: release.yml
scripts/: prepare-release.sh  update-logo.sh
src/: chart-loader.js  icons.js  index.html  main.js  main.js.bak  styles.css  templates.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CustomSelect.js  Dashboard.js  DatabaseCard.js  DockerCompose.js  Images.js  SearchFilters.js  Templates.js
src/lib/: dev-tools.js  index.js
src/lib/managers/: ContainerManager.js  FavoritesManager.js  ModalManager.js  TabManager.js
src/lib/services/: ComposeService.js  DatabaseService.js  ImageService.js  (+1 more)
(+14 files in other folders)
