[package]
name = "docker-db-manager"
version = "0.1.0"
description = "Docker Database Manager - Multi-database management tool for macOS"
authors = ["alemelgarejo"]
edition = "2021"
license = "MIT"
repository = "https://github.com/alemelgarejo/docker-database-manager"
keywords = ["docker", "database", "postgresql", "mysql", "mongodb"]
categories = ["database", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "docker_db_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bollard = "0.17"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-postgres = "0.7"

[dev-dependencies]
tokio-test = "0.4"

# Optimizaciones para release
[profile.release]
opt-level = "z"     # Optimizar para tamaño
lto = true          # Link Time Optimization
codegen-units = 1   # Mejor optimización (más lento de compilar)
strip = true        # Eliminar símbolos de debug
panic = "abort"     # Reducir tamaño del binario
